--- a/Dissertation/part3.tex
+++ b/Dissertation/part3.tex
@@ -95,7 +95,7 @@
 алгоритма разложения на свертки меньших размеров при практической реализации следует ожидать уменьшение выигрыша в быстродействии. Тем не менее следует сделать вывод, что быстрые алгоритмы вычисления двумерной свертки имеют практическую ценность для вычисления коротких сверток для ядер, начиная с размера $5\times5$.
 
 Использование общих подходов к построению быстрых алгоритмов в целом применимо для построения быстрых фильтров изображений. Вместе с тем при выборе алгоритмов и их параметров для программной или аппаратной реализации требуется учитывать особенности двумерных фильтров изображений, прежде всего, небольшой размер ядра.
-
+	
 \section{Интерполяционные методы} \label{sec:ch3/sect2}
 Для интерполяционных методов существует единый алгоритм оценки амплитуды и фазы гармонических составляющих напряжения. Базовым элементом для нахождения амплитуд и фаз гармонических составляющих напряжения является параметр $\delta$ \cite{558515}. 
 % 109. B. G. Quinn, "Estimation of frequency, amplitude, and phase from the DFT of a time series," in IEEE Transactions on Signal Processing, vol. 45, no. 3, pp. 814-817, March 1997, doi: 10.1109/78.558515.
@@ -161,9 +161,13 @@ W_{ji} = W \left( {\frac{2 \cdot \pi}{T_w} \cdot (i + \bigtriangleup r_j)}\right
 
 \begin{equation}
 	\label{eq:equation3.2}
-	u(t) = u'(t) \cdot w(t) = \displaystyle\sum_{\nu=0}^{\nu=N} A_\nu e^{j \cdot \varphi_\nu} w(t) e^{j \cdot \frac{2 \cdot \pi}{T_s} \cdot \nu \cdot t} + \eta (t) \cdot w(t) = \displaystyle\sum_{\nu=0}^{\nu=N} A_\nu e^{j \cdot \varphi_\nu} w(t) \cdot e^{j \cdot \frac{2 \cdot \pi}{T_s} \cdot \nu \cdot t} +\eta_w(t)
+	u(t) = u'(t) \cdot w(t) = \displaystyle\sum_{\nu=0}^{\nu=N} A_\nu e^{j \cdot \varphi_\nu} w(t) e^{j \cdot \frac{2 \cdot \pi}{T_s} \cdot \nu \cdot t} + \eta (t) \cdot w(t) = 
 \end{equation}
 
+\begin{equation}
+\label{eq:equation3.2_1}
+= \displaystyle\sum_{\nu=0}^{\nu=N} A_\nu e^{j \cdot \varphi_\nu} w(t) \cdot e^{j \cdot \frac{2 \cdot \pi}{T_s} \cdot \nu \cdot t} +\eta_w(t)
+\end{equation}
 Спектр сигнала $w(t) \cdot e^{j \cdot \frac{2 \cdot \pi}{T_s} \cdot \nu \cdot t}$, как известно из свойств преобразования Фурье, представляет собой смещенный на величину $\frac{2 \pi}{T_s} \cdot \nu$ спектр сигнала $w(t)$, a именно $W \left( {\omega - \frac{2 \cdot \pi}{T_s} \cdot \nu} \right)$.
 
 
@@ -185,7 +189,7 @@ W_{ji} = W \left( {\frac{2 \cdot \pi}{T_w} \cdot (i + \bigtriangleup r_j)}\right
 	D[\Theta_w(\omega)] = D[\Theta(\omega)] \cdot \frac{1}{T_w} \cdot \int\limits_{- \sfrac{T_w}{2}}^{\sfrac{T_w}{2}} w^2 (t) \mathrm{d}t = const  
 \end{equation}
 
-Следовательно, спектр напряжения $u(t)$  представляет собой взвешенную сумму спектров наложенного окна $W\left( {\omega - \frac{2 \cdot \pi}{T_s} \cdot \nu}\right)$   и случайной величины $\Theta_w(\omega)$  
+Следовательно, спектр напряжения $u(t)$  представляет собой взвешенную сумму спектров наложенного окна $W\left( {\omega - \frac{2 \cdot \pi}{T_s} \cdot \nu}\right)$ и случайной величины $\Theta_w(\omega)$  
 \cite{Increase_Accuracy_Yelizarov2014}:
 
 \begin{equation}
@@ -199,9 +203,13 @@ W_{ji} = W \left( {\frac{2 \cdot \pi}{T_w} \cdot (i + \bigtriangleup r_j)}\right
 
 \begin{equation}
 	\label{eq:equation3.6}
-	U \left(\frac{2 \cdot \pi}{T_w} \cdot n \right) = \displaystyle\sum_{\nu=0}^{\nu=N} A_{\nu} e^{j \cdot \varphi_\nu} W\left( {\frac{2 \cdot \pi}{T_w} \cdot n - \frac{2 \cdot \pi}{T_s} \cdot \nu }\right) = \displaystyle\sum_{\nu=0}^{\nu=N} A_{\nu} e^{j \cdot \varphi_\nu} W \left({\frac{2 \cdot \pi}{T_w} \cdot \left( {n - \frac{T_w}{T_s} \cdot \nu} \right) } \right) + \Theta_w(\omega)
+	U \left(\frac{2 \cdot \pi}{T_w} \cdot n \right) = \displaystyle\sum_{\nu=0}^{\nu=N} A_{\nu} e^{j \cdot \varphi_\nu} W\left( {\frac{2 \cdot \pi}{T_w} \cdot n - \frac{2 \cdot \pi}{T_s} \cdot \nu }\right) = 
 \end{equation}
 
+\begin{equation}
+\label{eq:equation3.6_1}
+=  \displaystyle\sum_{\nu=0}^{\nu=N} A_{\nu} e^{j \cdot \varphi_\nu} W \left({\frac{2 \cdot \pi}{T_w} \cdot \left( {n - \frac{T_w}{T_s} \cdot \nu} \right) } \right) + \Theta_w(\omega)
+\end{equation}	
 Пусть целая часть выражения в \ref{eq:equation3.6} $ n - \frac{T_w}{T_s} \cdot \nu$  равна $r$ , а дробная часть этого выражения равна $ \bigtriangleup r$ . Тогда: 
 
 \begin{equation}
@@ -214,7 +222,12 @@ W_{ji} = W \left( {\frac{2 \cdot \pi}{T_w} \cdot (i + \bigtriangleup r_j)}\right
 
 \begin{equation}
 	\label{eq:equation3.8}
-	\displaystyle\sum_{i=1}^{i=M} U_i W_{ji} = \displaystyle\sum_{i=1}^{i=M} A_{\nu} e^{j \cdot \varphi_\nu} W\left( {\frac{2 \cdot \pi}{T_w} \cdot (i + \bigtriangleup r ) }\right) \cdot W\left( {\frac{2 \cdot \pi}{T_w} \cdot (i + \bigtriangleup r_j ) }\right) = A_{\nu} e^{j \cdot \varphi_\nu} R (\bigtriangleup r - \bigtriangleup r_j) \Theta_w(\omega)
+	\displaystyle\sum_{i=1}^{i=M} U_i W_{ji} = \displaystyle\sum_{i=1}^{i=M} A_{\nu} e^{j \cdot \varphi_\nu} W\left( {\frac{2 \cdot \pi}{T_w} \cdot (i + \bigtriangleup r ) }\right) \cdot W\left( {\frac{2 \cdot \pi}{T_w} \cdot (i + \bigtriangleup r_j ) }\right) =
+\end{equation}
+
+\begin{equation}
+\label{eq:equation3.8_1}
+ A_{\nu} e^{j \cdot \varphi_\nu} R (\bigtriangleup r - \bigtriangleup r_j) \Theta_w(\omega)
 \end{equation}
 
 где $R (\bigtriangleup r - \bigtriangleup r_j)$ – корреляционная функция $W\left( {\frac{2 \cdot \pi}{T_w} \cdot (i + \bigtriangleup r) }\right)$  и $W\left( {\frac{2 \cdot \pi}{T_w} \cdot (i + \bigtriangleup r_j) }\right)$. 
@@ -317,7 +330,248 @@ $h(n)$ -- импульсный отклик системы, длиной $L$.
 Для фильтрации  узкополосных сигналов, необходимо использовать быстрые алгоритмы, т.~к. они позволяют сократить количество операций. 
 
 
-\section{Интерполированный алгоритм ДПФ} \label{sec:ch3/sect5}
+\section{Применение метода разложения двумерной свертки при реализации цифровых фильтров} \label{sec:ch3/sect5}
+% Альтман Е. А., Захаренко Е. И., Васеева Т. В. Применение метода разложения двумерной свертки при реализации цифровых фильтров //Научный вестник Новосибирского государственного технического университета. – 2017. – №. 4. – С. 95-104.
+В данной статье рассматривается вопрос вычислительной эффективности одной из базовых операций для алгоритмов обработки изображений и компьютерного зрения – фильтрации изображения \cite{Gonzalez2012digital}.
+% 2. Гонсалес Р., Вудс Р. Цифровая обработка изображений. – 2012.
+Под цифровой фильтрацией понимаются не только процедуры удаления шума или другой информации из сигнала, но и многие другие методы (изменение яркости, контрастности, выделение границ и~т.~д.), реализуемые с помощью математической операции двумерной свертки \cite{Rabiner1978theory, bluehut1989fast}.
+% 3. Рабинер Л., Гоулд Б. Теория и применение цифровой обработки сигналов. – Рипол Классик, 1978.
+
+% 4. Блейхут Р. Э. Быстрые алгоритмы цифровой обработки сигналов. – Мир, 1989.
+
+При цифровой обработке сигналов часто применяются две схожие операции: (линейная) свертка (convolution) и корреляция (correlation) \cite{bluehut1989fast, Lukin2002Introduction}. Они имеют схожие формулы, и для их быстрого вычисления могут использоваться одни и те же методы. 
+% 4. Блейхут Р. Э. Быстрые алгоритмы цифровой обработки сигналов. – Мир, 1989.
+
+% 5. Лукин А. Введение в цифровую обработку сигналов //М.: МГУ. Лаборатория компьютерной графики и мультимедиа. – 2002.
+
+Линейная двумерная дискретная свертка определяется следующей формулой \cite{decomposition_method_application2017}:
+\begin{equation}
+	\label{eq:equation3.5.1}
+	CON_{j1,j2} = \sum_{i1 =0}^{n1-1} \sum_{i2 =0}^{n2-1} x_{i1,i2} \cdot y_{i1-j1,i2-j2}
+\end{equation}
+
+Далее для простоты изложения и обобщения будем использовать терминологию, применяемую при использовании свертки для вычисления цифровых фильтров. В этом контексте $n1$ и $n2$ – это длина ядра цифрового фильтра по первой и второй размерности соответственно, $x$ – ядро или импульсная характеристика цифрового фильтра, $y$ – отчеты входной последовательности (обрабатываемое изображение) и $CON$ – выходная последовательность фильтра (свертка входной последовательности с ядром фильтра). 
+
+Дискретная корреляция двух последовательностей определяется следующей формулой: 
+\begin{equation}
+	\label{eq:equation3.5.2}
+	COR_{j1,j2} = \sum_{i1 =0}^{n1-1} \sum_{i2 =0}^{n2-1} x_{i1,i2} \cdot y_{i1+j1,i2+j2}
+\end{equation}
+
+Для пояснения этой формулы также воспользуемся примером ее применения для обработки изображения. В этом контексте $x$ – это фрагмент изображения размером $ n1 \times n2 $, для которого рассчитывается корреляция; $y$ – область, с которой сравнивается фрагмент изображения, и $COR$ – корреляция.
+
+Любую из приведенных операций можно свести к другой, инвертировав входные последовательности по всем размерностям. Это делает возможным применение одних и тех же алгоритмов для их выполнения. Однако имеются
+отдельные аспекты применения этих операций при решении конкретных задач.
+
+Во-первых, следует рассмотреть диапазоны, в которых берутся значения для переменных $j1$ и $j2$. Предположим, последовательность y имеет размер $m1 \times m2$. Для обеих рассматриваемых операций в зависимости от решаемой задачи может потребоваться найти результаты в диапазонах: 
+\begin{enumerate}
+	\item $0 \times 0: (m1 + n1 - 1) \times (m2 + n2 - 1)$;
+	
+	\item	$0 \times 0: n1 \times n2$;
+	
+	\item $0 \times 0: (m1 - n1 + 1) \times (m2 - n2 + 1)$. 
+\end{enumerate}
+
+В первом случае рассчитываются все возможные выходные значения, включая значения, для которых количество слагаемых в суммах будет меньше, чем $n1 \times n2$. Такой подход применяется в цифровых фильтрах (особенно в случае одномерных фильтров). Поскольку цифровая фильтрация является основным применением свертки, такой диапазон выходных значений часто указывается в определении свертки (хотя, строго говоря, это необязательное ограничение).
+
+Во втором варианте диапазоны выходных значений используются не часто. Он удобен тем, что размер последовательности на выходе совпадает с размером последовательности на входе, и такие операции можно выполнять
+последовательно.
+
+В третьем варианте рассчитываются только выходные значения, для которых количество слагаемых в суммах будет равно $n1 \times n2$. Этот вариант позволяет сравнивать между собой значения без дополнительной нормировки, поэтому он является основным при вычислении корреляции.
+
+Во-вторых, важным аспектом выполнения этих операций является соотношение между размерами последовательностей $x$ и $y$. При реализации цифровой фильтрации, как правило, $n1$ и $n2$ намного меньше $m1$ и $m2$. При вычислении корреляции эти величины чаще всего одного порядка.
+
+В-третьих, следует учесть, что при решении отдельных задач одна из входных величин известна заранее, и над ней можно выполнить предварительные вычисления, не увеличивающие сложность основной операции.
+Например, при цифровой фильтрации коэффициенты фильтра могут быть преобразованы в любую удобные форму на этапе разработки фильтра.
+
+Перечисленные выше аспекты выполнения операций свертки и корреляции оказывают существенное влияние на реализацию операций. В частности, от этих аспектов зависит эффективность применения так называемых быстрых алгоритмов. 
+
+В данной статье \cite{decomposition_method_application2017} рассматривается вопрос об эффективности применения подходов, предложенных для уменьшения количества вычислительных операций при реализации операции двумерной корреляции \cite{550562, altman2015fast}, для задачи выполнения двумерной фильтрации изображений (двумерной свертки).
+% 6. Y. Naito, T. Miyazaki and I. Kuroda, "A fast full-search motion estimation method for programmable processors with a multiply-accumulator," 1996 IEEE International Conference on Acoustics, Speech, and Signal Processing Conference Proceedings, Atlanta, GA, USA, 1996, pp. 3221-3224 vol. 6, doi: 10.1109/ICASSP.1996.550562.
+
+% 7. Альтман Е. А., Захаренко Е. И. Быстрый алгоритм вычисления двумерной корреляции для видеообработки //Доклады Томского государственного университета систем управления и радиоэлектроники. – 2015. – №. 2 (36).
+
+Будем рассматривать три варианта вычисления двумерной свертки. Первый вариант – вычисление двумерной свертки непосредственно по формуле \ref{eq:equation3.5.1}. Второй вариант – использование предложенного в \cite{550562} алгоритма разложения двумерной свертки в несколько двумерных сверток меньших размеров. Третий вариант – использование быстрых алгоритмов одномерной свертки \cite{MOU1987377} для вычисления двумерной свертки.
+% 6. Y. Naito, T. Miyazaki and I. Kuroda, "A fast full-search motion estimation method for programmable processors with a multiply-accumulator," 1996 IEEE International Conference on Acoustics, Speech, and Signal Processing Conference Proceedings, Atlanta, GA, USA, 1996, pp. 3221-3224 vol. 6, doi: 10.1109/ICASSP.1996.550562.
+
+% 8. Mou Z. J., Duhamel P. Fast FIR filtering: algorithms and implementations //Signal Processing. – 1987. – Т. 13. – №. 4. – С. 377-384.
+
+Отметим, что методы, основанные на разложении в свертки меньших размеров, имеют ограничение на размер сверток – ядро и входные данные должны иметь четное количество точек по каждой из размерностей. Это ограничение можно обойти с помощью комбинированного варианта вычисления свертки: для максимально возможного количества отчетов используется быстрый алгоритм вычисления, а оставшиеся вычисляются по определению.
+
+Ввиду того, что типичные ядра цифровых фильтров обычно имеют небольшой размер, мы не будем рассматривать алгоритмы, основанные на различных быстрых алгоритмах преобразования сигналов (например, быстрое преобразование Фурье (БПФ)) \cite{Kalinovsky2016application, Digital_processing_Goldenberg_1985}.
+% 9. Калиновский И. А., Спицын В. Г. Применение полиномиальных преобразований для быстрого вычисления двумерных сверток //Вычислительные методы и программирование: новые вычислительные технологии. – 2016. – Т. 17. – №. 3. – С. 197-203.
+
+% 10. Гольденберг Л. М. и др. Цифровая обработка сигналов: Справочник. – Радио и связь, 1985.
+
+Исходя из условий задачи примем, что предварительная обработка величины x не учитывается в общем числе операций и m значительно больше $n$.
+
+При цифровой фильтрации изображений применяют разные способы обработки краев изображений, поэтому выбор диапазона выходных значений при фильтрации изображений является неоднозначным. Но, учитывая, что m зна-
+чительно больше n, выбор этого диапазона незначительно скажется на относительной эффективности различных вариантов вычисления двумерной свертки. Для получения оценок сложности операций, не зависящих от диапа-
+зона выходных значений, введем следующие обозначения: $l1$ – длина диапазона выходных значений по первой размерности, $l2$ – по второй.
+
+При таких условиях для вычисления свертки по формуле \ref{eq:equation3.5.1} потребуется
+$n1 \times n2 \times l1 \times l2$ умножений и $(n1 - 1) \times (n2 - 1) \times n2 \times l1 \times l2$ сложений, всего $(n1 \times n2 + (n1 - 1) \times (n2 - 1)) \times l1 \times l2$ операций.
+
+Далее для сокращения размера формул примем следующие допущения.
+Предположим, что размер входных данные достаточно велик, что можно пренебречь единицей в операциях сложения. Также примем, что $n = n1 = n2$,
+$l = l1 = l2 и m = m1 = m2$. Как будет видно из дальнейшего изложения, такие
+
+допущения не скажутся на окончательных выводах. Таким образом, сложность двумерной свертки приблизительно равна $2n^2 \times l^2$ операций или $2n^2$ операций на один отсчет (пиксель) входного сигнала.
+
+В \cite{550562} для ускорения вычислений исходные данные разбиваются на части, в каждой из которых количество элементов в два раза меньше, чем в исходных данных по каждой из размерностей. При этом для удобства записи используется матричное представление данных. Преобразуем выражения из указанной статьи применительно к алгоритму двумерной свертки.
+Введем промежуточные переменные:
+% 6. Y. Naito, T. Miyazaki and I. Kuroda, "A fast full-search motion estimation method for programmable processors with a multiply-accumulator," 1996 IEEE International Conference on Acoustics, Speech, and Signal Processing Conference Proceedings, Atlanta, GA, USA, 1996, pp. 3221-3224 vol. 6, doi: 10.1109/ICASSP.1996.550562.
+\begin{equation}
+	\label{eq:equation3.5.3}
+\hat{x}_{i1,i2} = [x_{i1,i2}, x_{i1+2,i2}, \cdots , x_{i1+n1-2,i2}]
+\end{equation}
+
+\begin{equation}
+\label{eq:equation3.5.4}
+\hat{y}_{i1,i2} = [y{i1,i2}, y_{i1+2,i2}, \cdots , y_{i1+m1-2,i2}]
+\end{equation}
+
+Обозначим части входных данных:
+\begin{equation}
+	\label{eq:equation3.5.5}
+X_{i1,i2} = [\hat{x}_{i1,i2}, \hat{x}_{i1,i2+2}, \cdots , \hat{x}_{i1,i2+n2-2}] 
+\end{equation}
+
+\begin{equation}
+	\label{eq:equation3.5.6}
+	Y_{i1,i2} = [\hat{y}_{i1,i2}, \hat{y}_{i1,i2+2}, \cdots , \hat{y}_{i1,i2+m2-2}] 
+\end{equation}
+
+Используя введенные обозначения, формулу \ref{eq:equation3.5.1} можно переписать как:
+\begin{equation}
+	\label{eq:equation3.5.7}
+CON_{j1,j2} = 
+\begin{bmatrix}
+CON_{j1,j2} \\ CON_{j1+1,j2} \\ CON_{j1,j2+1} \\ CON_{j1+1,j2+1}	
+\end{bmatrix}
+= \begin{bmatrix}
+Y_{i1,i2} & Y_{i1-1,i2} & Y_{i1,i2-1} & Y_{i1-1,i2-1} \\
+Y_{i1-1,i2} & Y_{i1-2,i2} & Y_{i1-1,i2-1} & Y_{i1-2,i2-1} \\
+Y_{i1,i2-1}  & Y_{i1-1,i2-1}  & Y_{i1,i2-1} & Y_{i1-1,i2-2}  \\
+Y_{i1-1,i2-1} & Y_{i1-2,i2-1} & Y_{i1-1,i2-2} & Y_{i1-2,i2-2} 	
+\end{bmatrix}
+\cdot
+\begin{bmatrix}
+X_{0,0} \\ X_{0,1} \\ X_{1,0} \\ X_{1,1}	
+\end{bmatrix}		
+\end{equation}
+
+Обозначим:
+\begin{equation}
+	\label{eq:equation3.5.8}
+A_0 = X_{0,0} - X_{1,0}.	
+\end{equation}
+
+\begin{equation}
+	\label{eq:equation3.5.9}
+	A_1 = X_{0,1} - X_{1,1}.	
+\end{equation}
+
+\begin{equation}
+	\label{eq:equation3.5.10}
+	B_{j1,j2} = Y_{j1,j2} - Y_{j1+1,j2}.	
+\end{equation}
+
+Тогда выражение \ref{eq:equation3.5.7} может быть разложено следующим образом:
+\begin{equation}
+\label{eq:equation3.5.11}
+CON_{j1,j2} = 
+\begin{bmatrix}
+\left( {B_{j1,j2} + B_{j1,j2+1}} \right) X_{0,0} \\
+\left( {B_{j1+1,j2} + B_{j1+1,j2+1}} \right) X_{1,0} \\
+\left( {B_{j1,j2+1} + B_{j1,j2+2}} \right) X_{0,1} \\
+\left( {B_{j1+1,j2+1} + B_{j1+1,j2+2}} \right) X_{1,1}
+\end{bmatrix}
++
+\begin{bmatrix}
+-1 & 0 \\
+0 & -1 \\
+1 & 0  \\
+0 & 1	
+\end{bmatrix}
+\cdot
+\begin{bmatrix}
+	B_{j1,j2+1} \left( {X_{0,0} - X_{0,1}} \right) \\
+	B_{j1+1,j2+1} \left( {X_{1,0} - X_{1,1}} \right)	
+\end{bmatrix}
++
+\end{equation}
+
+\begin{equation}
+\label{eq:equation3.5.12}
++ 
+\begin{bmatrix}
+-1 & 0 \\
+1 & 0 \\
+0 & -1  \\
+0 & 1	
+\end{bmatrix}
+\cdot
+\begin{bmatrix}
+\left(	{Y{j1+1,j2} + Y{j1+1,j2+1}} \right) \cdot A_0 \\
+\left(	{Y{j1+1,j2+1} + Y{j1+1,j2+2}} \right) \cdot A_1	
+\end{bmatrix}
++
+\end{equation}
+
+\begin{equation}
+\label{eq:equation3.5.13}
++
+\begin{bmatrix}
+1 \\ -1 \\ -1 \\ 1
+\end{bmatrix}
+\cdot
+Y{j1+1,j2+1}
+\cdot
+(A_0 - A_1)
+\end{equation}
+
+Как видно из формулы \ref{eq:equation3.5.11}, двумерная свертка сводится к девяти двумерным сверткам с размерами, меньшими в два раза по обеим размерностям.
+Дополнительно к этим сверткам требуется выполнить еще несколько операций над матрицами, которые также меньше в два раза по обеим размерностям относительно исходных данных. Сложность этих сверток, если не применять дальнейшее рекурсивное разбиение на свертки меньшего размера, составит $\frac{9}{8n^2 × l^2}$ операций умножения и сложения.
+
+В дополнительные операции входят действия над матрицами $X$ и $A$. Над ними выполняется пять сложений, но эти операции могут быть выполнены при разработке цифрового фильтра и не учитываться при подсчете сложности работы самого фильтра.
+Также требуется вычислить шесть матриц $B$, два раза сложить матрицы
+$Y$ и четыре раза сложить матрицы $B$. Для этого потребуется $\frac{12}{4m^2}$ операций.
+
+На последнем этапе нужно собрать результаты сверток меньшей длины. По формуле для этого требуется выполнить $3 \times 4 = 12$ сложений матриц, но при сложении последних четверок матриц операции дважды повторяются, поэтому можно обойтись десятью сложениями. Сложность этих операций $\frac{10 }{4l^2}$.
+
+Таким образом, сложность вычисления двумерной свертки при однократном разбиении на свертки меньшего размера составит примерно
+
+$ \frac{9}{8n^2 \times l^2} + \frac{12}{4m^2} + \frac{10}{4l^2}$, еще более грубая оценка составит 
+$\frac{9}{8n^2} \times l^2 + \frac{5}{2l^2}$ или $\frac{9}{8n^2} + \frac{5}{2}$ операций на один отсчет (пиксель) входного сигнала.
+
+Метод использования одномерной свертки для вычисления двумерной зависит от ядра цифрового фильтра \cite{Digital_processing_Goldenberg_1985, gruzman2002digital}. 
+% 11. Гольденберг Л. М. и др. Цифровая обработка сигналов: Справочник. – Радио и связь, 1985.
+% 12. Грузман И. С. и др. Цифровая обработка изображений в информационных системах //Новосибирск: изд-во НГТУ. – 2002. – Т. 352. – С. 6.
+Если ядро обладает свойством сепарабельности, то двумерная свертка сводится к двум одномерным сверткам. Это значительно сокращает количество требуемых операций, и при разработке фильтров разработчики стремятся получить именно такое ядро \cite{Huang1984fast}.
+% 13. Хуанг Т. С. Быстрые алгоритмы в цифровой обработке изображений. – Издательство Pubmix. com, 1984.
+Этот частный случай хорошо изучен, поэтому далее мы его рассматривать не
+будем.
+
+В общем случае ядро цифрового фильтра не является сепарабельным. В этом случае для ускорения двумерной свертки мы можем применить разложение, применяемое для разложения одномерной свертки \cite{MOU1987377} к внешней сумме двумерной свертки, вычисляя внутреннюю по обычной формуле.
+% 8. Mou Z. J., Duhamel P. Fast FIR filtering: algorithms and implementations //Signal Processing. – 1987. – Т. 13. – №. 4. – С. 377-384.
+
+Для оценки сложности этого варианта воспользуемся известной оценкой сложности одномерных цифровых фильтров \cite{haykin2005cocktail}. При однократном разбиении на свертки меньших размеров для вычисления одномерной свертки требуется $\frac{3}{4n}$ умножений и $ \frac{3}{4n}  + \frac{1}{2}$ сложений на один отчет входной последовательности или $\frac{3}{4n \times l}$ умножений и $ \frac{3}{ 4n \times l} +\frac{l}{2}$ сложений в целом. Умножим эти цифры на сложность внутренней суммы $n \times l$, получим
+следующую оценку общего числа операций: $\frac{3}{2n^2 \times l^2} +\frac{n \times l^2}{2} $ или $\frac{3}{2n^2} + \frac{n^2}{2}$ операций на один отсчет (пиксель) входного сигнала.
+% 14. Haykin S., Chen Z. The cocktail party problem //Neural computation. – 2005. – Т. 17. – №. 9. – С. 1875-1902.
+
+Решая несложные уравнения, мы получим, что наименьшую сложность до $n \leq 1$ имеет метод полного перебора. Для n в диапазоне от $1$ до примерно $2,5$ наименьшую сложность имеет метод, основанный на разложении одномерной свертки. При $n > 2,5$ наименьшей сложностью обладает метод, основанный на разложении двумерной свертки.
+
+Интерпретируя эти результаты, нужно учитывать, что они получены по 
+приблизительным оценкам сложности алгоритмов, что алгоритмы, использующие разложения, можно применять не для всех значений n и что быстродействие алгоритмов при их практической реализации зависит не только от количества требуемых арифметических операций.
+
+С учетом сказанного можно сделать вывод, что основанные на разложении быстрые алгоритмы вычисления двумерной свертки имеет смысл применять, начиная с размера ядра $4 \times 4$. Практически применяются ядра нечетных
+
+размеров. Сокращение числа требуемых операций при применении разложения при ядре $5 \times 5$ составляет $16 \%$,$  7 \times 7 - 27 \% $, $9 \times 9 - 31 \%$. Ввиду сложности алгоритма разложения на свертки меньших размеров при практической реализации следует ожидать уменьшение выигрыша в быстродействии, тем
+не менее следует сделать вывод, что рассмотренные в статье алгоритмы имеют практическую ценность для вычисления коротких сверток для ядер, начиная с размера $5 \times 5 $.
+
+
+\section{Интерполированный алгоритм ДПФ} \label{sec:ch3/sect6}
 Интерполированный алгоритм ДПФ (IpDFT -- Interpolated Discrete Fourier Transform) является одним из наиболее широко изученных методов оценки \cite{santamaria2000comparative, zhang2001algorithm, qian2007interharmonics, ferreira2005accurate, xie1996nonlinear, luo2015phase, jain1979high, grandke1983interpolation, andria1989windows, offelli1989interpolation, agrez2002weighted, jacobsen2007fast, belega2009multifrequency, belega2010accuracy, duda2011dft, schoukens1992interpolated}. 
 % [156.-Santamaria I., Pantaleon C., Ibanez J. A comparative study of high-accuracy frequency estimation methods //Mechanical Systems and Signal Processing. – 2000. – Т. 14. – №. 5. – С. 819-834.]
 
@@ -1030,8 +1284,8 @@ $C_{n}$ может быть записана:
 
 При $\delta <0$ получаем $K(\epsilon) < T(\delta, \epsilon) < 1$ 
 
-\section{Разряженное Быстрое Преобразование Фурье} \label{sec:ch3/sect6}
-% ПЕРЕПИСАТЬ СВОИМИ СЛОВАМИ
+\section{Разряженное Быстрое Преобразование Фурье} \label{sec:ch3/sect7}
+% Дополнить
 
 Spare FFT (SFFT, разряженное БПФ) -- алгоритм оценки спектра сигнала, содержащего малое число гармоник. В отличие от усеченного БПФ, которое находит небольшое число гармоник с заранее известным номером, SFFT находит гармоники, которые имеют более высокую амплитуду по сравнению с другими гармониками. Еще более существенное отличие SFFT от остальных БПФ заключается в том, что этот алгоритм является вероятностным и работает только для сигналов, для которых выполняются определенные условия (отсутствие в спектре большое числа гармоник с большой амплитудой, низкий уровень шума и другие).
 
@@ -1198,7 +1452,7 @@ Fourier Transform), а выход – с дисплеем. Блок диспле
 Предлагаемый анализатор измерения гармоник заключается в использовании двух операций (Resampling и SFFT). Он позволит усовершенствовать средства измерительных устройств в электрических сетях для измерения гармоник. Новый анализатор учитывает ПКЭ согласно действующим нормативным документам. Алгоритм SFFT быстрее, чем БПФ, поэтому увеличится вычислительная способность. SFFT точнее при 
 подобных вычислительных затратах. 
 
-\section{Выводы по разделу} \label{sec:ch3/sect7}
+\section{Выводы по разделу} \label{sec:ch3/sect8}
 На основании анализа, произведенного в третьем разделе, были получены следующие результаты:
 
 \begin{enumerate}
