--- a/biblio/external.bib
+++ b/biblio/external.bib
@@ -1573,4 +1573,372 @@
   year        = {1990},
 }
 
+@Article{Lukin2002Introduction,
+  author  = {Лукин, А},
+  journal = {М.: МГУ. Лаборатория компьютерной графики и мультимедиа},
+  title   = {Введение в цифровую обработку сигналов},
+  year    = {2002},
+}
+
+@Article{Kalinovsky2016application,
+  author    = {Калиновский, Илья Андреевич and Спицын, Владимир Григорьевич},
+  journal   = {Вычислительные методы и программирование: новые вычислительные технологии},
+  title     = {Применение полиномиальных преобразований для быстрого вычисления двумерных сверток},
+  year      = {2016},
+  number    = {3},
+  pages     = {197--203},
+  volume    = {17},
+  publisher = {Томский политехнический университет},
+}
+
+@Article{haykin2005cocktail,
+  author    = {Haykin, Simon and Chen, Zhe},
+  journal   = {Neural computation},
+  title     = {The cocktail party problem},
+  year      = {2005},
+  number    = {9},
+  pages     = {1875--1902},
+  volume    = {17},
+  publisher = {MIT Press},
+}
+
+@Article{Gonzalez2012digital,
+  author    = {Гонсалес, Рафаэль and Вудс, Р},
+  title     = {Цифровая обработка изображений},
+  year      = {2012},
+  publisher = {Техносфера},
+}
+
+@Book{Rabiner1978theory,
+  author    = {Рабинер, Лоуренс and Гоулд, Бернард},
+  publisher = {Рипол Классик},
+  title     = {Теория и применение цифровой обработки сигналов},
+  year      = {1978},
+}
+
+@Book{Huang1984fast,
+  author    = {Хуанг, Томас С},
+  publisher = {Издательство Pubmix. com},
+  title     = {Быстрые алгоритмы в цифровой обработке изображений},
+  year      = {1984},
+}
+
+@Article{durdhavale2016review,
+  author    = {Durdhavale, Snehal R and Ahire, Dyaneshwar D},
+  journal   = {International Journal of Computer Applications},
+  title     = {A review of harmonics detection and measurement in power system},
+  year      = {2016},
+  number    = {10},
+  pages     = {42--45},
+  volume    = {143},
+  publisher = {Foundation of Computer Science},
+}
+
+@Book{arrillaga1997power,
+  author    = {Arrillaga, Jos and Smith, Bruce C and Watson, Neville R and Wood, Alan R},
+  publisher = {John Wiley \& Sons},
+  title     = {Power system harmonic analysis},
+  year      = {1997},
+}
+
+@Article{rodriguez2017novel,
+  author    = {Rodriguez-Guerrero, Marco A and Carranza-Lopez-Padilla, Rene and Osornio-Rios, Roque A and Romero-Troncoso, Rene de J},
+  journal   = {Electric Power Systems Research},
+  title     = {A novel methodology for modeling waveforms for power quality disturbance analysis},
+  year      = {2017},
+  pages     = {14--24},
+  volume    = {143},
+  publisher = {Elsevier},
+}
+
+@Article{guo2016method,
+  author    = {Guo, Xiaoqiang and Zhong, Rui and Zhao, Longpan and Yin, Jun and Sun, Weifeng},
+  journal   = {IET Electric Power Applications},
+  title     = {Method for radial vibration modelling in switched reluctance motor},
+  year      = {2016},
+  number    = {9},
+  pages     = {834--842},
+  volume    = {10},
+  publisher = {IET},
+}
+
+@Article{6919330,
+  author  = {H. {Wen} and J. {Zhang} and Z. {Meng} and S. {Guo} and F. {Li} and Y. {Yang}},
+  journal = {IEEE Transactions on Industrial Informatics},
+  title   = {Harmonic Estimation Using Symmetrical Interpolation FFT Based on Triangular Self-Convolution Window},
+  year    = {2015},
+  number  = {1},
+  pages   = {16-26},
+  volume  = {11},
+  doi     = {10.1109/TII.2014.2362491},
+}
+
+@Article{7172520,
+  author  = {M. S. {Reza} and V. G. {Agelidis}},
+  journal = {IEEE Transactions on Instrumentation and Measurement},
+  title   = {A Robust Technique for Single-Phase Grid Voltage Fundamental and Harmonic Parameter Estimation},
+  year    = {2015},
+  number  = {12},
+  pages   = {3262-3273},
+  volume  = {64},
+  doi     = {10.1109/TIM.2015.2444259},
+}
+
+@Article{beltran2017fast,
+  author    = {Beltran-Carbajal, F and Silva-Navarro, G},
+  journal   = {Electric Power Systems Research},
+  title     = {A fast parametric estimation approach of signals with multiple frequency harmonics},
+  year      = {2017},
+  pages     = {157--162},
+  volume    = {144},
+  publisher = {Elsevier},
+}
+
+@Article{4102347,
+  author  = {A. A. {Girgis} and F. M. {Ham}},
+  journal = {IEEE Transactions on Aerospace and Electronic Systems},
+  title   = {A Quantitative Study of Pitfalls in the FFT},
+  year    = {1980},
+  number  = {4},
+  pages   = {434-439},
+  volume  = {AES-16},
+  doi     = {10.1109/TAES.1980.308971},
+}
+
+@Article{dash1998fast,
+  author    = {Dash, PK and Liew, AC and Swain, DP and Mishra, B},
+  journal   = {International Journal of Electrical Power \& Energy Systems},
+  title     = {Fast tracking of transient power system signals using fuzzy LMS algorithm},
+  year      = {1998},
+  number    = {8},
+  pages     = {555--561},
+  volume    = {20},
+  publisher = {Elsevier},
+}
+
+@Article{1413428,
+  author  = {K. K. C. {Yu} and N. R. {Watson} and J. {Arrillaga}},
+  journal = {IEEE Transactions on Power Delivery},
+  title   = {An adaptive Kalman filter for dynamic harmonic state estimation and harmonic injection tracking},
+  year    = {2005},
+  number  = {2},
+  pages   = {1577-1584},
+  volume  = {20},
+  doi     = {10.1109/TPWRD.2004.838643},
+}
+
+@Article{dash1996harmonic,
+  author    = {Dash, PK and Swain, DP and Routray, A and Liew, AC},
+  journal   = {IEE Proceedings-Generation, Transmission and Distribution},
+  title     = {Harmonic estimation in a power system using adaptive perceptrons},
+  year      = {1996},
+  number    = {6},
+  pages     = {565--574},
+  volume    = {143},
+  publisher = {IET},
+}
+
+@Article{ray2012ensemble,
+  author    = {Ray, Pravat Kumar and Subudhi, Bidyadhar},
+  journal   = {IEEE transactions on instrumentation and measurement},
+  title     = {Ensemble-Kalman-filter-based power system harmonic estimation},
+  year      = {2012},
+  number    = {12},
+  pages     = {3216--3224},
+  volume    = {61},
+  publisher = {IEEE},
+}
+
+@Article{singh2016several,
+  author    = {Singh, Santosh Kumar and Sinha, Nilotpal and Goswami, Arup Kumar and Sinha, Nidul},
+  journal   = {International Journal of Electrical Power \& Energy Systems},
+  title     = {Several variants of Kalman Filter algorithm for power system harmonic estimation},
+  year      = {2016},
+  pages     = {793--800},
+  volume    = {78},
+  publisher = {Elsevier},
+}
+
+@Article{6553247,
+  author  = {M. {Valtierra-Rodriguez} and R. {de Jesus Romero-Troncoso} and R. A. {Osornio-Rios} and A. {Garcia-Perez}},
+  journal = {IEEE Transactions on Industrial Electronics},
+  title   = {Detection and Classification of Single and Combined Power Quality Disturbances Using Neural Networks},
+  year    = {2014},
+  number  = {5},
+  pages   = {2473-2482},
+  volume  = {61},
+  doi     = {10.1109/TIE.2013.2272276},
+}
+
+@Article{4084681,
+  author  = {H. C. {Lin}},
+  journal = {IEEE Transactions on Industrial Electronics},
+  title   = {Intelligent Neural Network-Based Fast Power System Harmonic Detection},
+  year    = {2007},
+  number  = {1},
+  pages   = {43-52},
+  volume  = {54},
+  doi     = {10.1109/TIE.2006.888685},
+}
+
+@Article{lin2016electromagnetic,
+  author    = {Lin, Fu and Zuo, Shuguang and Wu, Xudong},
+  journal   = {IET Electric Power Applications},
+  title     = {Electromagnetic vibration and noise analysis of permanent magnet synchronous motor with different slot-pole combinations},
+  year      = {2016},
+  number    = {9},
+  pages     = {900--908},
+  volume    = {10},
+  publisher = {IET},
+}
+
+@Article{joorabian2009harmonic,
+  author    = {Joorabian, M and Mortazavi, SS and Khayyami, AA},
+  journal   = {Electric power systems research},
+  title     = {Harmonic estimation in a power system using a novel hybrid Least Squares-Adaline algorithm},
+  year      = {2009},
+  number    = {1},
+  pages     = {107--116},
+  volume    = {79},
+  publisher = {Elsevier},
+}
+
+@Article{moravej2014hybrid,
+  author    = {Moravej, Zahra and Enayati, Javad},
+  journal   = {International Transactions on Electrical Energy Systems},
+  title     = {A hybrid least squares--clonal selection based algorithm for harmonics estimation},
+  year      = {2014},
+  number    = {1},
+  pages     = {1--15},
+  volume    = {24},
+  publisher = {Wiley Online Library},
+}
+
+@Article{1193852,
+  author  = {M. {Bettayeb} and {Uvais Qidwai}},
+  journal = {IEEE Transactions on Power Delivery},
+  title   = {A hybrid least squares-GA-based algorithm for harmonic estimation},
+  year    = {2003},
+  number  = {2},
+  pages   = {377-382},
+  volume  = {18},
+  doi     = {10.1109/TPWRD.2002.807458},
+}
+
+@Article{4469961,
+  author  = {Z. {Lu} and T. Y. {Ji} and W. H. {Tang} and Q. H. {Wu}},
+  journal = {IEEE Transactions on Power Delivery},
+  title   = {Optimal Harmonic Estimation Using A Particle Swarm Optimizer},
+  year    = {2008},
+  number  = {2},
+  pages   = {1166-1174},
+  volume  = {23},
+  doi     = {10.1109/TPWRD.2008.917656},
+}
+
+@Article{singh2016power,
+  author    = {Singh, Santosh Kumar and Sinha, Nabangshu and Goswami, Arup Kumar and Sinha, Nidul},
+  journal   = {International Journal of Electrical Power \& Energy Systems},
+  title     = {Power system harmonic estimation using biogeography hybridized recursive least square algorithm},
+  year      = {2016},
+  pages     = {219--228},
+  volume    = {83},
+  publisher = {Elsevier},
+}
+
+@Article{6202692,
+  author  = {S. K. {Jain} and S. N. {Singh} and J. G. {Singh}},
+  journal = {IEEE Transactions on Industrial Electronics},
+  title   = {An Adaptive Time-Efficient Technique for Harmonic Estimation of Nonstationary Signals},
+  year    = {2013},
+  number  = {8},
+  pages   = {3295-3303},
+  volume  = {60},
+  doi     = {10.1109/TIE.2012.2200218},
+}
+
+@Article{6419813,
+  author  = {S. K. {Jain} and S. N. {Singh}},
+  journal = {IEEE Transactions on Industrial Electronics},
+  title   = {Low-Order Dominant Harmonic Estimation Using Adaptive Wavelet Neural Network},
+  year    = {2014},
+  number  = {1},
+  pages   = {428-435},
+  volume  = {61},
+  doi     = {10.1109/TIE.2013.2242414},
+}
+
+@Article{nanda2016new,
+  author    = {Nanda, Sarita and Chakravorty, Tatiana and Dash, PK},
+  journal   = {Australian Journal of Electrical and Electronics Engineering},
+  title     = {A new Taylor-LMS adaptive filter for parameter estimation of power signals including distributed generation systems},
+  year      = {2016},
+  number    = {3},
+  pages     = {174--194},
+  volume    = {13},
+  publisher = {Taylor \& Francis},
+}
+
+@Article{6522142,
+  author  = {J. {Gilles}},
+  journal = {IEEE Transactions on Signal Processing},
+  title   = {Empirical Wavelet Transform},
+  year    = {2013},
+  number  = {16},
+  pages   = {3999-4010},
+  volume  = {61},
+  doi     = {10.1109/TSP.2013.2265222},
+}
+
+@Article{6908042,
+  author  = {K. {Thirumala} and A. C. {Umarikar} and T. {Jain}},
+  journal = {IEEE Transactions on Power Delivery},
+  title   = {Estimation of Single-Phase and Three-Phase Power-Quality Indices Using Empirical Wavelet Transform},
+  year    = {2015},
+  number  = {1},
+  pages   = {445-454},
+  volume  = {30},
+  doi     = {10.1109/TPWRD.2014.2355296},
+}
+
+@Article{enayati2017real,
+  author    = {Enayati, Javad and Moravej, Zahra},
+  journal   = {IET Generation, Transmission \& Distribution},
+  title     = {Real-time harmonics estimation in power systems using a novel hybrid algorithm},
+  year      = {2017},
+  number    = {14},
+  pages     = {3532--3538},
+  volume    = {11},
+  publisher = {IET},
+}
+
+@Article{6574296,
+  author  = {C. {Rakpenthai} and S. {Uatrongjit} and N. R. {Watson} and S. {Premrudeepreechacharn}},
+  journal = {IEEE Transactions on Power Systems},
+  title   = {On Harmonic State Estimation of Power System With Uncertain Network Parameters},
+  year    = {2013},
+  number  = {4},
+  pages   = {4829-4838},
+  volume  = {28},
+  doi     = {10.1109/TPWRS.2013.2273943},
+}
+
+@Article{bettayeb1998recursive,
+  author    = {Bettayeb, Maamar and Qidwai, Uvais},
+  journal   = {Electric power systems research},
+  title     = {Recursive estimation of power system harmonics},
+  year      = {1998},
+  number    = {2},
+  pages     = {143--152},
+  volume    = {47},
+  publisher = {Elsevier},
+}
+
+@Book{simon2006optimal,
+  author    = {Simon, Dan},
+  publisher = {John Wiley \& Sons},
+  title     = {Optimal state estimation: Kalman, H infinity, and nonlinear approaches},
+  year      = {2006},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
