--- a/common/characteristic.tex
+++ b/common/characteristic.tex
@@ -2,28 +2,23 @@
 {\actuality} 
 Диссертационная работа посвящена совершенствованию математической модели многотонального сигнала и численных методов оценки параметров его гармоник. 
 
-Существуют различные сигналы, которые можно классифицировать:
 
-
-В работе \cite{Increase_Accuracy_Yelizarov2014} рассмотрены известны алгоритмы, описывающие способы оценки спектральных составляющих напряжения: интерполяционные методы, метод корреляционных функций и усовершенствованные методы корреляционных функций, методы, рекомендованные в ГОСТ. 
-% Елизаров Д. А. Повышение точности оценки показателей несинусоидальности напряжения в электроэнергетических системах //Омск: дис.… канд. техн. наук. – 2014.
-
-Спектральные составляющие, относящиеся к интергармоникам, обычно изменяются по амплитуде и по частоте. Интергармоники тока или напряжения являются спектральные составляющие между двумя гармоническими частотами. 
-
-Математической основой для анализа спектра сигналов является преобразование Фурье. Практически преобразование Фурье определяется с помощью систем цифровой обработки сигналов (ЦОС).
-Для дискретных сигналов применяется дискретное преобразование Фурье (ДПФ) или Быстрое преобразование Фурье (БПФ). БПФ является оптимальным с точки зрения быстродействия алгоритмом, реализующим ДПФ. 
-
-С увеличением силовых электронных систем, влияние интергармоник в системе эелектроснабжения стало более ощутимым. \cite{GOST30804.4.30-2013}
-
-В стандарте ГОСТ~30804.4.7-2013 \cite{GOST30804.4.7-2013} определены способы образования интергармонических групп путем группирования следующих друг за другом с частотой 5 Гц спектральных составляющих в интервале частот между последовательными гармоническими составляющими
-
-В работе предложены рекомендации по оценки гармоник и интергармоник напряжения быстрым методом корреляционных функций. 
-% 41.	Елизаров, Д.А. Повышение достоверности оценки показателей несинусоидальности напряжения в электроэнергетических системах / Е.А. Альтман, Д.А. Елизаров. // Приборы и методы измерений, контроля качества и диагностики в промышленности и на транспорте: Материалы Всероссийской науч.-техн. конф. с международным участием / Омский гос. техн. ун-т. Омск, 2013. С. 312-317. 
+%В работе \cite{Increase_Accuracy_Yelizarov2014} рассмотрены известны алгоритмы, описывающие способы оценки спектральных составляющих напряжения: интерполяционные методы, метод корреляционных функций и усовершенствованные методы корреляционных функций, методы, рекомендованные в ГОСТ. 
+%% Елизаров Д. А. Повышение точности оценки показателей несинусоидальности напряжения в электроэнергетических системах //Омск: дис.… канд. техн. наук. – 2014.
 %
-
-
-
-
+%Спектральные составляющие, относящиеся к интергармоникам, обычно изменяются по амплитуде и по частоте. Интергармоники тока или напряжения являются спектральные составляющие между двумя гармоническими частотами. 
+%
+%Математической основой для анализа спектра сигналов является преобразование Фурье. Практически преобразование Фурье определяется с помощью систем цифровой обработки сигналов (ЦОС).
+%Для дискретных сигналов применяется дискретное преобразование Фурье (ДПФ) или Быстрое преобразование Фурье (БПФ). БПФ является оптимальным с точки зрения быстродействия алгоритмом, реализующим ДПФ. 
+%
+%С увеличением силовых электронных систем, влияние интергармоник в системе эелектроснабжения стало более ощутимым. \cite{GOST30804.4.30-2013}
+%
+%В стандарте ГОСТ~30804.4.7-2013 \cite{GOST30804.4.7-2013} определены способы образования интергармонических групп путем группирования следующих друг за другом с частотой 5 Гц спектральных составляющих в интервале частот между последовательными гармоническими составляющими
+%
+%В работе предложены рекомендации по оценки гармоник и интергармоник напряжения быстрым методом корреляционных функций. 
+%% 41.	Елизаров, Д.А. Повышение достоверности оценки показателей несинусоидальности напряжения в электроэнергетических системах / Е.А. Альтман, Д.А. Елизаров. // Приборы и методы измерений, контроля качества и диагностики в промышленности и на транспорте: Материалы Всероссийской науч.-техн. конф. с международным участием / Омский гос. техн. ун-т. Омск, 2013. С. 312-317. 
+%%
+%
 
 %Алгоритмы оценки параметров гармоник, применяемые при работе с однональными и многотональными сигналами, имеют точность оценки параметров ниже теоретической границы Крамера-Рао. Граница Крамера-Рао позволяет найти минимальную дисперсию оценки параметра сигнала. Для гармонических сигналов известны формулы, оценивающие дисперсии амплитуды, частоты и фазы гармоник, однако, известные методы их оценки показывают результаты выше этой границы. В том числе не достигает границы Крамера-Рао и метод корреляционного анализа, который находит гармоники по методу максимального правдоподобия. 
 %
